<resources>
    <string name="app_name">Gesture Control</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gesture_activation">GestureActivation</string>
    <string name="title_activity_commands">Commands</string>

    <string name="switch_volume">Increase/Decrease volume</string>
    <string name="switch_camera">Launch camera</string>
    <string name="switch_voice">Voice recognition</string>
    <string name="switch_music">Launch music</string>
    <string name="switch_phone">Launch phone</string>
    <string name="switch_contact">Call contact</string>
    <string name="switch_message">Send message</string>
    <string name="switch_navigation">Go to place</string>
    <string name="switch_twitter">Post localization on Twitter</string>
    <string name="switch_mute_notifications">Mute notifications</string>
    <string name="switch_flashlight">Turn on/off flashlight</string>

    <string name="button_volume_increase">+</string>
    <string name="button_volume_decrese">-</string>
    <string name="button_volume">Volume</string>
    <string name="button_camera">Launch camera</string>
    <string name="button_voice">Voice recognition</string>
    <string name="button_music">Listen to music</string>
    <string name="button_phone">Launch phone</string>
    <string name="button_contact">Call contact</string>
    <string name="button_message">Send message</string>
    <string name="button_navigation">Go to place</string>
    <string name="button_twitter">Post localization on Twitter</string>
    <string name="button_mute_notifications">Mute notifications</string>
    <string name="button_unmute_notifications">Unmute notifications</string>
    <string name="button_flashlight">Turn on/off flashlight</string>

    <string name="button_contact_selection">Select</string>
    <string name="button_navigation_select">Select</string>

    <string name="label_name_location">NAME</string>
    <string name="button_save_location">SAVE</string>

    <string name="no_flashlight_available">No flashlight available.</string>
    <string name="no_camera_available">No camera available.</string>
    <string name="title_activity_transparent_layout">TransparentLayout</string>

    <string name="gesture_not_recognized">Gesture not recognized</string>
    <string name="gesture_disabled">This gesture was disabled.</string>
    <string name="no_phone">has no phone associated.</string>
    <string name="title_activity_location_selector">LocationSelector</string>

    <string name="name_first_message">Give a name before saving</string>
    <string name="unknown_address">Unknown address</string>
    <string name="no_navigation">Google Navigation not installed.</string>
    <string name="my_location_is">I am at</string>

    <string name="twitter_consumer_key">1JFx6ffVFD8GlnEeLUOwo21PG</string>
    <string name="twitter_secret_key">I3Sc6JnOB7cNHVZBRi1fJtb4AOMtUESGYIjY1Z7cHf7dxRnY3W</string>

    <string name="not_connected">Device not connected to internet.</string>

    <string name="description_geral">To use a gesture, touch the blue floating icon and then make the gesture.</string>
    <string name="description_volume">Clockwise circle or shake to right increases volume, anticlockwise circle or shake to left decreases volume.</string>
    <string name="description_camera">Double tap the screen to launch the camera app.</string>
    <string name="description_voice">Make a "V" in the screen to launch voice recognition.</string>
    <string name="description_music">Make a CLEF in the screen to launch music app.</string>
    <string name="description_phone">Long press the screen to launch phone.</string>
    <string name="description_message">Make a "M" in the screen to launch message app.</string>
    <string name="description_contact">Make a heart in the screen to call your contact.</string>
    <string name="description_navigation">Make a triangle in the screen to navigate.</string>
    <string name="description_twitter">Make a check mark in the screen to post your localization on Twitter.</string>
    <string name="description_mute">Put your screen faced down to mute notifications.</string>
    <string name="description_flashlight">Shake your device to turn the flashlight on and off.</string>

</resources>
