<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bruno.gesturecontrol.Commands">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_volume_decrese"
                android:id="@+id/button_volume_decrease"
                android:onClick="decreaseVolume"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/button_volume"
                android:id="@+id/volume_label" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_volume_increase"
                android:id="@+id/button_volume_increase"
                android:onClick="increaseVolume"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_camera"
            android:id="@+id/button_camera"
            android:onClick="launchCamera"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_phone"
            android:id="@+id/button_phone"
            android:onClick="launchPhone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_contact"
            android:id="@+id/button_contact"
            android:onClick="callContact"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_navigation"
            android:id="@+id/button_navigation"
            android:onClick="goToPlace"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_twitter"
            android:id="@+id/button_twitter"
            android:onClick="postTwitter"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_mute_notifications"
            android:id="@+id/button_mute_notifications"
            android:onClick="muteNotifications"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_flashlight"
            android:id="@+id/button_flashlight"
            android:onClick="turnFlashlight"/>
    </LinearLayout>
</RelativeLayout>